--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .hello {
-    background-image: url("https://i.imgur.com/zB8R1W6.jpg");
+    background-image: url("https://www.itl.cat/pics/b/0/9638_flower-laptop-wallpaper.jpg");
 }
 
 .pic {
