--- a/css/style.css
+++ b/css/style.css
@@ -36,15 +36,18 @@ body {
     width: auto;
 }
 
+.links {
+background-color: aliceblue;
+}
+
 a {
     color: inherit;
 }
 
 a:hover {
-    color: hotpink;
+    color: #3cb2e8;
 }
 
 a:link, a:visited {
     text-decoration: none;
 }
-
