--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ body {
 .hello {
     background-image: url("../images/bg.jpg");
     padding: 100px;
-
 }
 
 .pic {
@@ -37,7 +36,7 @@ body {
 }
 
 .links {
-background-color: aliceblue;
+    background-color: aliceblue;
 }
 
 a {
@@ -50,4 +49,15 @@ a:hover {
 
 a:link, a:visited {
     text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.resume {
+    column-count: 2;
+    column-gap: 40px;
+    column-rule-style: solid;
+    column-rule-width: 1px;
 }
